<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="363dp"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="55dp"
                android:layout_height="64dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.179" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="116dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:text="RepoName"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/user_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="170dp"
                android:layout_height="52dp"
                android:layout_marginLeft="8dp"
                android:paddingStart="8dp"
                android:text="Description"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/user_photo"
                app:layout_constraintTop_toBottomOf="@+id/full_name" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="140dp"
                android:layout_height="19dp"
                android:layout_marginLeft="8dp"
                android:paddingStart="8dp"
                android:text="UserName"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/user_photo"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/created_at"
                android:layout_width="166dp"
                android:layout_height="18dp"
                android:layout_marginLeft="8dp"
                android:paddingStart="8dp"
                android:text="CreatedAt"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/user_photo"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <TextView
                android:id="@+id/language"
                android:layout_width="68dp"
                android:layout_height="24dp"
                android:layout_marginTop="24dp"
                android:paddingStart="8dp"
                android:text="Lang"
                android:textSize="14sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stars"
                android:layout_width="55dp"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:text="Stars"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language" />

            <ImageView
                android:id="@+id/star_image"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/stars"
                android:background="@drawable/ic_star_black_24dp"
                />

            <Button
                android:id="@+id/save"
                android:layout_width="42dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_check_circle_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/stars" />

            <Button
                android:id="@+id/delete"
                android:layout_width="42dp"
                android:layout_height="33dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_delete_black_24dp"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/created_at"
                app:layout_constraintTop_toBottomOf="@+id/stars" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>